k8s-specifications/ai-analyzer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ai-analyzer
  name: ai-analyzer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-analyzer
  template:
    metadata:
      labels:
        app: ai-analyzer
    spec:
      containers:
      - image: yashwanth-yasp/ai-analyzer-find-your-bias:latest # IMPORTANT: Replace 'latest' with the specific image tag from your CI build
        name: ai-analyzer
        ports:
        - containerPort: 5001
          name: ai-analyzer
