k8s-specifications/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: find-your-bias-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - http:
      paths:
      - path: /result(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: result
            port:
              number: 80
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: vote
            port:
              number: 80
